Fix scrollbar style

--- a/public/css/admin/main.css
+++ b/public/css/admin/main.css
@@ -223,4 +223,7 @@ body {
   }
 }
 
+::-webkit-scrollbar {
+    width: 0;
+}
 
