--- a/resources/css/admin/main.css
+++ b/resources/css/admin/main.css
@@ -223,3 +223,6 @@ body {
   }
 }
 
+::-webkit-scrollbar {
+    width: 0;
+}
